--- a/session/package.json
+++ b/session/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "express-session": "^1.15.6"
+    "express-mysql-session": "^2.0.1",
+    "express-session": "^1.15.6",
+    "session-file-store": "^1.2.0"
   }
 }
