--- a/session/package.json
+++ b/session/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongodb-session": "^2.0.3",
     "express": "^4.16.4",
     "express-mysql-session": "^2.0.1",
     "express-session": "^1.15.6",
